--- a/cpp_01/ex01/Makefile
+++ b/cpp_01/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: lpaulo-m <lpaulo-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/09 16:07:56 by lpaulo-m          #+#    #+#              #
-#    Updated: 2023/07/16 12:45:38 by lpaulo-m         ###   ########.fr        #
+#    Updated: 2023/07/16 15:55:40 by lpaulo-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -67,4 +67,4 @@ vg: re
 # PHONY
 ################################################################################
 
-.PHONY: all re clean fclean run
+.PHONY: all re clean fclean run vg
