Add inspect method.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "ctime": "cpp",
     "iomanip": "cpp",
     "sstream": "cpp",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "bitset": "cpp"
   }
 }
