--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,9 @@
     "sstream": "cpp",
     "fstream": "cpp",
     "bitset": "cpp"
-  }
+  },
+  "cSpell.words": [
+    "scav",
+    "Scav"
+  ]
 }
